# tiktaktoe

./: .clang-format  .dockerignore  .gitignore  AUTHORS  Architecture.md  CMakeLists.txt  CNAME  Conventions.md  Dockerfile  Doxyfile  Justfile  Makefile  Presentation.md  README.md  compile_commands.json  convert_to_array.sh  convert_to_string.sh  custom.css  docker-compose.yml  flake.nix  linux.code-workspace  main.c  repomix-output.xml  toolchain.cmake  windows.code-workspace
.github/: copilot-instructions.md
.github/workflows/: docker.yml  documentation.yml
assets/: circle_starts.txt  circle_wins.txt  computer_starts.txt  cross_starts.txt  cross_wins.txt  its_a_tie.txt  medium_cross_unicode.txt  player_starts.txt  tik_tak_toe_ascii.txt
devices/: random.c  timer.c  timer.h  uart.c  uart.h
docs/: custom.css  header.html  index.html
docs/doxygen-awesome-css/: doxygen-awesome-tabs.js
docs/html/: annotated.html  annotated_dup.js  classes.html  dir_000001_000000.html  dir_000001_000006.html  dir_000002_000001.html  dir_000002_000003.html  dir_000002_000007.html  dir_000003_000000.html  dir_000003_000002.html  dir_000003_000004.html  dir_000003_000005.html  dir_000003_000007.html  dir_000004_000000.html  dir_000004_000001.html  dir_000004_000003.html  dir_000004_000005.html  dir_000004_000007.html  dir_000004_000008.html  dir_000005_000000.html  dir_000005_000002.html  dir_000005_000004.html  dir_000005_000008.html  dir_000006_000001.html  dir_000006_000003.html  dir_000006_000004.html  dir_000006_000005.html  dir_000006_000007.html  dir_000007_000000.html  dir_000007_000002.html  dir_000007_000006.html  dir_000007_000008.html  dir_000008_000001.html  dir_000008_000005.html  dir_000008_000007.html  dir_000009_000000.html  dir_000009_000002.html  dir_000009_000006.html  dir_000009_000008.html  dir_125447c92e2d7c7fbb49f13fdd370274.html  (+77 more)
docs/latex/: annotated.tex  dir_125447c92e2d7c7fbb49f13fdd370274.tex  dir_3d2e4578fe4cc3b7fa6177047437af5b.tex  dir_3d2e4578fe4cc3b7fa6177047437af5b_dep.md5  dir_4ce6a7f885e2866a554ba9e7335035f1.tex  dir_50333faf82af0af43ed56cb1a6180ddb.tex  dir_586ad3c2f85d776b984733890d824e3e.tex  dir_6128f950e94a9f4f19db7ca2cf549754.tex  dir_701344d99a520edc46b3f16735b55bde.tex  dir_7bedaf62fd1d2aeb36af24ca0b4a199b.tex  dir_a413b7f902cba5167b433a6fe834d5bd.tex  dir_a699ffc1b5d8061d9242ee9dbcf4765b.tex  dir_b7878ad5ecbf2506f4125b9d34c97e45.tex  dir_b7878ad5ecbf2506f4125b9d34c97e45_dep.md5  dir_d0a28e83c5c25d47f1925faeb21b90dd.tex  files.tex  index.tex  refman.tex  topics.tex
docs/rtf/: dir_125447c92e2d7c7fbb49f13fdd370274.rtf  dir_379e7395918bdddf5544f1f5badb427e.rtf  dir_3d2e4578fe4cc3b7fa6177047437af5b.rtf  dir_4ce6a7f885e2866a554ba9e7335035f1.rtf  dir_50333faf82af0af43ed56cb1a6180ddb.rtf  dir_50333faf82af0af43ed56cb1a6180ddb_dep.md5  dir_586ad3c2f85d776b984733890d824e3e.rtf  dir_6128f950e94a9f4f19db7ca2cf549754.rtf  dir_6128f950e94a9f4f19db7ca2cf549754_dep.md5  dir_701344d99a520edc46b3f16735b55bde.rtf  dir_701344d99a520edc46b3f16735b55bde_dep.md5  dir_7bedaf62fd1d2aeb36af24ca0b4a199b.rtf  dir_a413b7f902cba5167b433a6fe834d5bd.rtf  dir_a699ffc1b5d8061d9242ee9dbcf4765b.rtf  dir_a699ffc1b5d8061d9242ee9dbcf4765b_dep.md5  dir_b7878ad5ecbf2506f4125b9d34c97e45.rtf  dir_d0a28e83c5c25d47f1925faeb21b90dd.rtf  refman.rtf
entry/: entry-S.c  entry.S  entry_c.c  entry_c.h  linker_script.ld  linker_script.lds
hal_high/: random.c  timer.c  uart.c
helper-scripts/: convert_to_array.sh  convert_to_string.sh
html/: annotated.html  classes.html  dir_000001_000000.html  dir_000001_000002.html  dir_000001_000006.html  dir_000002_000001.html  dir_000002_000003.html  dir_000002_000004.html  dir_000002_000006.html  dir_000002_000007.html  dir_000003_000000.html  dir_000003_000002.html  dir_000003_000004.html  dir_000003_000005.html  dir_000003_000006.html  dir_000003_000007.html  dir_000004_000000.html  dir_000004_000001.html  dir_000004_000002.html  dir_000004_000003.html  dir_000004_000005.html  dir_000004_000006.html  dir_000004_000007.html  dir_000004_000008.html  dir_000005_000000.html  dir_000005_000002.html  dir_000005_000003.html  dir_000005_000004.html  dir_000005_000006.html  dir_000005_000008.html  dir_000006_000001.html  dir_000006_000003.html  dir_000006_000004.html  dir_000006_000005.html  dir_000006_000007.html  dir_000007_000000.html  dir_000007_000002.html  dir_000007_000004.html  dir_000007_000006.html  dir_000007_000008.html  (+80 more)
html/search/: all_0.js  all_1.js  all_10.js  all_11.js  (+70 more)
include/: config.h  config.h.in  def.h
interrupts/: input.h  interrupt1.h
latex/: annotated.tex  dir_125447c92e2d7c7fbb49f13fdd370274.tex  dir_379e7395918bdddf5544f1f5badb427e.tex  dir_3d2e4578fe4cc3b7fa6177047437af5b.tex  dir_4ce6a7f885e2866a554ba9e7335035f1.tex  dir_4ce6a7f885e2866a554ba9e7335035f1_dep.md5  dir_50333faf82af0af43ed56cb1a6180ddb.tex  dir_586ad3c2f85d776b984733890d824e3e.tex  dir_6128f950e94a9f4f19db7ca2cf549754.tex  dir_6128f950e94a9f4f19db7ca2cf549754_dep.md5  dir_701344d99a520edc46b3f16735b55bde.tex  dir_701344d99a520edc46b3f16735b55bde_dep.md5  dir_a413b7f902cba5167b433a6fe834d5bd.tex  dir_a699ffc1b5d8061d9242ee9dbcf4765b.tex  dir_b7878ad5ecbf2506f4125b9d34c97e45.tex  dir_b7878ad5ecbf2506f4125b9d34c97e45_dep.md5  dir_d0a28e83c5c25d47f1925faeb21b90dd.tex  files.tex  index.tex  refman.tex
logic/: game.h
output/: field.h
rtf/: dir_125447c92e2d7c7fbb49f13fdd370274.rtf  dir_379e7395918bdddf5544f1f5badb427e.rtf  dir_3d2e4578fe4cc3b7fa6177047437af5b.rtf  dir_3d2e4578fe4cc3b7fa6177047437af5b_dep.md5  dir_4ce6a7f885e2866a554ba9e7335035f1.rtf  dir_50333faf82af0af43ed56cb1a6180ddb.rtf  dir_586ad3c2f85d776b984733890d824e3e.rtf  dir_6128f950e94a9f4f19db7ca2cf549754.rtf  dir_6128f950e94a9f4f19db7ca2cf549754_dep.md5  dir_701344d99a520edc46b3f16735b55bde.rtf  dir_701344d99a520edc46b3f16735b55bde_dep.md5  dir_7bedaf62fd1d2aeb36af24ca0b4a199b.rtf  dir_a413b7f902cba5167b433a6fe834d5bd.rtf  dir_a699ffc1b5d8061d9242ee9dbcf4765b.rtf  dir_b7878ad5ecbf2506f4125b9d34c97e45.rtf  dir_d0a28e83c5c25d47f1925faeb21b90dd.rtf  refman.rtf
src/: main.c
util/: asm4doxy.pl
(+3078 files in other folders)
